# joystick2mh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VS2022.bat
.github/workflows/: cmake_windows.yml  main.yml
cmake/: windeployqt.cmake
res/: joystick2mh.qrc  joystick2vc.qrc  mainwindow.ui  resource.rc
res/installer/: joystick2mh.iss.in  joystick2vc.iss  joystick2vc.iss.in
src/: colors.h  data_point.cpp  data_point.h  dmx_color.cpp  dmx_color.h  main.cpp  mainwindow.cpp  mainwindow.h  model_data.cpp  model_data.h  motor_data.cpp  motor_data.h
src/outputs/: ArtNetOutput.cpp  ArtNetOutput.h  BaseOutput.h  DDPOutput.cpp  DDPOutput.h  DMXOutput.cpp  DMXOutput.h  E131Output.cpp  E131Output.h  IPOutput.h  OpenDMXOutput.cpp  OpenDMXOutput.h  OutputManager.cpp  OutputManager.h  SerialOutput.h
